[package]
name = "lazy-borink"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
lazy-borink-derive = { path = "../lazy-borink-derive", optional = true }

[dev-dependencies]
serde_json = "1"


[features]
default = ["derive"]
derive = ["dep:lazy-borink-derive"]