[package]
name = "lazy-borink"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]
description = "Lazy deserialization type."

[dependencies]
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
lazy-borink-derive = { version = "0.1", path = "../lazy-borink-derive", optional = true }

[dev-dependencies]
serde_json = "1"


[features]
default = ["derive"]
derive = ["dep:lazy-borink-derive"]